tests/cases/compiler/binaryArithmatic1.ts
var v = 4 | null;
//~^ ERROR:  The value 'null' cannot be used here.